<resources>
    <string name="app_name">EKycDemo3</string>
    <string name="show_me_front">Xuất trình mặt trước CMND</string>
    <string name="show_me_back">Xuất trình mặt sau CMND</string>
    <string name="auth_success">Xác thực thành công!</string>
    <string name="head_is">\Head is: \</string>
    <string name="verification_result">Kết quả xác thực</string>
    <string name="your_contact">THÔNG TIN CÁ NHÂN</string>
    <string name="phone">Điện thoại</string>
    <string name="email">Email</string>
    <string name="confirm">xác nhận</string>
    <string name="enter_phone_email">Vui lòng nhập</string>
    <string name="liveness_real_person">Liveness: </string>
    <string name="step_3_3">Bước 3/3</string>
    <string name="step_2_3">Bước 2/3</string>
    <string name="step_1_3">Bước 1/3</string>
    <string name="next_step_face_detection">Bước tiếp theo: \Face Detection</string>
    <string name="result_text">Raw text</string>
    <string name="id_card">CMND</string>
    <string name="driver">Bằng lái xe</string>
    <string name="passport">Hộ chiếu</string>
    <string name="enter_full_name">Nhập họ tên</string>
    <string name="doc_type">Chọn loại hồ sơ</string>
    <string name="cont">Tiếp tục</string>
    <string name="enter_otp">Nhập mã OTP</string>
    <string name="id">ID</string>
    <string name="name">Họ tên</string>
    <string name="dob">Ngày sinh</string>
    <string name="addr">Quê quán</string>
    <string name="issuedAdd">Nơi cấp</string>
    <string name="issuedDate">Ngày cấp</string>
    <string name="edit">Sửa</string>
    <string name="auto_cap">Chế độ tự động</string>
    <string name="flash_on">Bật đèn</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="cap_front">Chụp mặt trước CMND</string>
    <string name="cap_back">Chụp mặt sau CMND</string>
    <string name="precision">Precision: </string>
    <string name="auth_failed">Xác thực thất bại</string>
</resources>