<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/layout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent">


        <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enter_full_name"
                android:inputType="text" />
    </LinearLayout>

    <TextView
            android:id="@+id/tv_docType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/doc_type"
            android:layout_marginTop="15sp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/layout0" />

    <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/chooser_style"
            android:padding="7dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_docType">

        <ImageView
                android:id="@+id/iv_card"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/id_card" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/id_card"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/chooser_style"
            android:padding="7dp"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

        <ImageView
                android:id="@+id/iv_driver"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/driver_license" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/driver"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/chooser_style"
            android:padding="7dp"
            app:layout_constraintTop_toBottomOf="@+id/layout2">

        <ImageView
                android:id="@+id/iv_passport"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/passport" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/passport"
                android:textSize="20sp" />

    </LinearLayout>

    <Button
            android:id="@+id/btnCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="10dp"
            android:text="@string/cont"
            app:layout_constraintBottom_toTopOf="@+id/tvStep" />

    <TextView
            android:id="@+id/tvStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/step_1_3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>