<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IDCardScannerActivity">

    <androidx.camera.view.PreviewView
            android:id="@+id/prv_text_recognition"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/lb_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/result_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/prv_text_recognition" />

    <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/lb_result" />

    <TextView
            android:id="@+id/tv_text_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/show_me_front"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/prv_text_recognition" />

    <TextView
            android:id="@+id/tvStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/step_1_3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:id="@+id/btn_next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/next_step_face_detection"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>